Fix bugs, work on adding java 9 module.